--- a/src/app/components/productType/productType.component.html
+++ b/src/app/components/productType/productType.component.html
@@ -7,11 +7,11 @@
               <div class="main-box no-header clearfix">
                   <div class="main-box-body clearfix">
                     <div class=" col-md-12 mb-3">
-                        <p>Titulo chido</p>
+                        <p>Categorias</p>
                         <form class="needs-validation" novalidate>
                             <div class="form-row">
                               <div class="col-md-4 mb-3">
-                                <label for="validationCustom01">Unidad de Medida</label>
+                                <label for="validationCustom01">Categorias</label>
                                 <input type="text" class="form-control" name="type" class="form-control" #type="ngModel" [(ngModel)]="ptype.type" id="validationCustom01" placeholder="Fruta"  required>
                               </div>
                             </div>
@@ -65,4 +65,3 @@
             </div>
     </div>
 </div>
-
