--- a/src/app/components/products/product.component.html
+++ b/src/app/components/products/product.component.html
@@ -1,19 +1,47 @@
-
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 
-  <div class="container bootstrap snippet">
-      <div class="row">
-          <div class="col-lg-12">
-              <div class="main-box no-header clearfix">
-                  <div class="main-box-body clearfix">
+<div class="container bootstrap snippet">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="main-box no-header clearfix">
+                <div class="main-box-body clearfix">
                     <div class=" col-md-12 mb-3">
                         <p>Productos</p>
                         <form class="needs-validation" novalidate>
                             <div class="form-row">
                                 <div class="col-md-4 mb-3">
                                     <label for="validationCustom01">Nombre(s)</label>
-                                    <input type="text" class="form-control" name="pName" class="form-control" #pName="ngModel" [(ngModel)]="product.name" id="validationCustom01" placeholder="Naranja"  required>
+                                    <input type="text" class="form-control" name="pName" class="form-control" #pName="ngModel" [(ngModel)]="product.name" id="validationCustom01"
+                                        placeholder="Naranja" required>
                                 </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <label for="validationCustom05">Categoria</label>
+                                    <select id="inputType" class="form-control" name="pCat" #pCat="ngModel" [(ngModel)]="product.category" required>
+                                        <!-- <option selected> {{product.category}}</option> -->
+                                        <option *ngFor="let ct of ptypes ">{{ct._id}}</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-4 mb-3">
+                                    <label for="validationCustomUsername">Precio</label>
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text" id="inputGroupPrepend">$</span>
+                                        </div>
+                                        <input type="text" class="form-control" id="validationCustomUsername" name="pPrice" #pPrice="ngModel" [(ngModel)]="product.price"
+                                            placeholder="13.00" aria-describedby="inputGroupPrepend" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col-md-12 mb-3">
+                                    <label for="validationCustom03">Descripción</label>
+                                    <input type="text" class="form-control" name="pDesc" #pDesc="ngModel" [(ngModel)]="product.description" id="validationCustom03"
+                                        placeholder="Naranja traida de las granjas de XXXXX" required>
+                                </div>
+                                
+                            </div>
+                            <div class="form-row">
                                 <div class="col-md-3 mb-3">
                                     <label for="validationCustom05">Tipo de unidad</label>
                                     <!-- <select id="inputType" class="form-control" name="pUnit" #pUnit="ngModel" [(ngModel)]="product.unit" required>
@@ -24,54 +52,43 @@
                                       <input type="checkbox" name="" value="{{u.name}}">{{u.name}}
                                     </div>
                                   </div>
+
                                   <div class="col-md-3 mb-3">
-                                    <label for="validationCustom05">Categoria</label>
-                                    <select id="inputType" class="form-control" name="pCat" #pCat="ngModel" [(ngModel)]="product.category" required>
-                                        <!-- <option selected> {{product.category}}</option> -->
-                                        <option *ngFor="let ct of ptypes ">{{ct._id}}</option>
-                                    </select>
-                                  </div>
-                                </div>
-                                <div class="form-row">
-                                  <div class="col-md-5 mb-3">
-                                    <label for="validationCustom03">Descripción</label>
-                                    <input type="text" class="form-control" name="pDesc" #pDesc="ngModel" [(ngModel)]="product.description" id="validationCustom03" placeholder="Naranja traida de las granjas de XXXXX" required>
-                                  </div>
-                                  <div class="col-md-4 mb-3">
-                                    <label for="validationCustomUsername">Precio</label>
-                                    <div class="input-group">
-                                      <div class="input-group-prepend">
-                                        <span class="input-group-text" id="inputGroupPrepend">$</span>
-                                      </div>
-                                      <input type="text" class="form-control" id="validationCustomUsername" name="pPrice" #pPrice="ngModel" [(ngModel)]="product.price" placeholder="13.00" aria-describedby="inputGroupPrepend" required>
+                                    <label for="validationCustom05">Proveedores</label>
+                                    <!-- <select id="inputType" class="form-control" name="pUnit" #pUnit="ngModel" [(ngModel)]="product.unit" required>
+                                        <option selected> {{product.unit}}</option>
+                                        <option *ngFor="let u of units ">{{u._id}}</option>
+                                    </select> -->
+                                    <div *ngFor="let p of providers">
+                                      <input type="checkbox" name="" value="{{p._id}}">{{p._id}}
                                     </div>
                                   </div>
                             </div>
                             <button class="btn btn-primary float-right mb-3" type="reset" (click)="createProducts()">Agregar</button>
-                          </form>
+                        </form>
                     </div>
 
-          </div>
-      </div>
-  </div>
-</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="container bootstrap snippet">
     <div class="row">
         <div class="col-lg-12">
-                    <div class="table-responsive">
-                        <div class="main-box no-header clearfix">
-                            <div class="main-box-body clearfix">
-                        <table class="table user-list" >
+            <div class="table-responsive">
+                <div class="main-box no-header clearfix">
+                    <div class="main-box-body clearfix">
+                        <table class="table user-list">
                             <thead>
-                                <tr >
-                                <th><span>Producto</span></th>
-                                <th><span>Unidad</span></th>
-                                <th class="text-center"><span>Categoria</span></th>
-                                <th><span>Precio</span></th>
-                                <th>Opciones</th>
-                                </tr >
+                                <tr>
+                                    <th><span>Producto</span></th>
+                                    <th><span>Unidad</span></th>
+                                    <th class="text-center"><span>Categoria</span></th>
+                                    <th><span>Precio</span></th>
+                                    <th>Opciones</th>
+                                </tr>
                             </thead>
                             <tbody>
                                 <tr *ngFor="let p of products">
@@ -109,7 +126,7 @@
                         </table>
                     </div>
                 </div>
-              </div>
             </div>
+        </div>
     </div>
 </div>
