--- a/src/app/components/request/edit/editRequest.component.html
+++ b/src/app/components/request/edit/editRequest.component.html
@@ -84,22 +84,53 @@
     </div>
 </div>
 <br>
-<div class="container">
+
+
+<div class="container bootstrap snippet">
         <div class="row">
-            <div *ngFor="let p of products" class="col-sm-3">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">{{p.name}}</h5>
-                        <p class="card-text">{{p.category.type}}
-                        </p>
-                        <p class="card-text font-weight-bold">{{p.unit.name}}
-                        </p>
-                        <a class="btn btn-primary" data-toggle="modal" data-target="#myModal" (click)="addProduct(p)">Add</a>
+            <div class="col-lg-12">
+                <div class="table-responsive">
+                    <div class="main-box no-header clearfix">
+                        <div class="main-box-body clearfix">
+                            <div class="container">
+                                <h2>Productos disponibles</h2>
+                                    <br>
+                                    <ng-container *ngFor="let pt of ptypes">
+                                            <table class="table user-list" >
+                                                    <thead>
+                                                            {{pt.type}}
+                                                    </thead>
+                                                    <tbody>
+                                                        <ng-container *ngFor="let p of products">
+                                                                <tr *ngIf="p.category._id == pt._id" >
+                                                                        <td style="width: 15%">
+                                                                            <a href="#" class="">{{p.name}}</a>
+                                                                        </td>
+                                                                        <td style="width: 55%">
+                                                                            <p >{{p.description}}</p>
+                                                                        </td>
+                                                                        <td style="width: 15%">
+                                                                            <p>${{p.price}}</p>
+                                                                        </td>  
+                                                                        <td style="width: 15%">
+                                                                                <button class="btn btn-outline-primary" data-toggle="modal" data-target="#myModal" (click)="addProduct(p)">Añadir a listado</button>
+                                                                        </td>
+                                                                </tr>
+                                                        </ng-container>
+                                                        
+                                                        
+                                                    </tbody>
+                                                </table>
+                                                <br>
+                                    </ng-container>
+                            </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
 
 
 
