--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="app.component.html">
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" [routerLinkActive]="['active']" [routerLink]="['/users']">
       <div class="sidebar-brand-icon rotate-n-15">
         <i class="fas fa-laugh-wink"></i>
       </div>
@@ -17,9 +17,9 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active">
-      <a class="nav-link" href="index.html">
+      <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/users']">
         <i class="fas fa-fw fa-tachometer-alt"></i>
-        <span>Dashboard</span></a>
+        <span>Inicio</span></a>
     </li>
 
     <!-- Divider -->
@@ -27,7 +27,7 @@
 
     <!-- Heading -->
     <div class="sidebar-heading">
-      Administración
+      Funciones
     </div>
 
     <!-- Nav Item - Pages Collapse Menu -->
@@ -48,11 +48,11 @@
     <li class="nav-item">
       <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
         <i class="fas fa-fw fa-wrench"></i>
-        <span>Utilities</span>
+        <span>Pedidos</span>
       </a>
       <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
-          <h6 class="collapse-header">Custom Utilities:</h6>
+          <h6 class="collapse-header">Funciones</h6>
           <a class="collapse-item" *ngIf="rest.loggedIn() && rest.getRole()=='Admin'" [routerLinkActive]="['active']" [routerLink]="['/dinningRooms']">Comedores</a>
           <a class="collapse-item" *ngIf="rest.loggedIn() && rest.getRole()!='Compras'" [routerLinkActive]="['active']" [routerLink]="['/units']">Unidades</a>
           <a class="collapse-item" [routerLinkActive]="['active']" [routerLink]="['/requests']">Pedidos</a>
@@ -60,48 +60,6 @@
           <a class="collapse-item" [routerLinkActive]="['active']" [routerLink]="['/products']">Productos</a>
         </div>
       </div>
-    </li>
-<!--
-    <!-- Divider -->
-    <hr class="sidebar-divider">
-
-    <!-- Heading -->
-    <div class="sidebar-heading">
-      Addons
-    </div>
-
-    <!-- Nav Item - Pages Collapse Menu -->
-    <li class="nav-item">
-      <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
-        <i class="fas fa-fw fa-folder"></i>
-        <span>Pages</span>
-      </a>
-      <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-        <div class="bg-white py-2 collapse-inner rounded">
-          <h6 class="collapse-header">Login Screens:</h6>
-          <a class="collapse-item" href="login.html">Login</a>
-          <a class="collapse-item" href="register.html">Register</a>
-          <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-          <div class="collapse-divider"></div>
-          <h6 class="collapse-header">Other Pages:</h6>
-          <a class="collapse-item" href="404.html">404 Page</a>
-          <a class="collapse-item" href="blank.html">Blank Page</a>
-        </div>
-      </div>
-    </li>
-
-    <!-- Nav Item - Charts -->
-    <li class="nav-item">
-      <a class="nav-link" href="charts.html">
-        <i class="fas fa-fw fa-chart-area"></i>
-        <span>Charts</span></a>
-    </li>
-
-    <!-- Nav Item - Tables -->
-    <li class="nav-item">
-      <a class="nav-link" href="tables.html">
-        <i class="fas fa-fw fa-table"></i>
-        <span>Tables</span></a>
     </li>
 
     <!-- Divider -->
@@ -113,7 +71,7 @@
     </div>
 
   </ul>
-  <!-- End of Sidebar --> -->
+  <!-- End of Sidebar -->
 
   <!-- Content Wrapper -->
   <div id="content-wrapper" class="d-flex flex-column">
