--- a/src/app/components/request/request.component.html
+++ b/src/app/components/request/request.component.html
@@ -25,7 +25,7 @@
                                 <div class="container mb-3">
                                     <label for="tArequest">Observaciones</label>
                                     <textarea id="tArequest" rows="2" cols="50" name="desc" class="form-control" #desc="ngModel" [(ngModel)]="request.observations">
-                                    
+
                                  </textarea>
                                 </div>
 
@@ -122,21 +122,21 @@
                                                             </p>
                                                             <p style="width: 15%">
                                                                 ${{p.price}}
-                                                            </p>  
+                                                            </p>
                                                             <p style="width: 15%">
                                                                     <button class="btn btn-outline-primary" data-toggle="modal" data-target="#myModal" (click)="addProduct(p)">Añadir a listado</button>
                                                             </p>
                                                 <hr style="width:95%">
                                         </div>
                                     </ng-container>
-                                    
-                                    
-                                    
+
+
+
                                 </div>
                             </ng-container>
                             <br>
                             <br>
-                            
+
                         </div>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
     <br>
     <br>
     <br>
-
+</div>
     <div class="container bootstrap snippet">
         <div class="row">
             <div class="col-lg-12">
@@ -303,7 +303,7 @@
                     <div class="container mb-3">
                         <label for="tArequest">Observaciones</label>
                         <textarea id="tArequest" rows="2" cols="50" name="desc" class="form-control" #desc="ngModel" [(ngModel)]="statusEdit.AuthObservations">
-                                
+
                              </textarea>
                     </div>
 
@@ -333,7 +333,7 @@
                     <div class="container mb-3">
                         <label for="tArequest">Observaciones</label>
                         <textarea id="tArequest" rows="2" cols="50" name="desc" class="form-control" #desc="ngModel" [(ngModel)]="statusEdit.AuthObservations">
-                                
+
                              </textarea>
                     </div>
 
